Fix: navbar being narrow when shifted from large devices.

--- a/style.css
+++ b/style.css
@@ -1210,10 +1210,6 @@ p.morning {
     line-height: 80px;
   }
 
-  .nav-bar {
-    padding: 0% 10%;
-  }
-
   .btn-design {
     font-size: 16px;
     padding: 8px 28px;
